[gd_scene load_steps=9 format=3 uid="uid://c5p02p3qcur07"]

[ext_resource type="Script" path="res://UI/scripts/end_of_day_sequence.gd" id="1_ox1cl"]

[sub_resource type="Animation" id="Animation_7oin0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CarpeDiem:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_5qcqq"]
resource_name = "bop"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CarpeDiem:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 1.02)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jle7"]
_data = {
"RESET": SubResource("Animation_7oin0"),
"bop": SubResource("Animation_5qcqq")
}

[sub_resource type="Animation" id="Animation_mv2v2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_c5l6f"]
resource_name = "continueText"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ContinueText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_krnge"]
resource_name = "show"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n2fr5"]
_data = {
"RESET": SubResource("Animation_mv2v2"),
"continueText": SubResource("Animation_c5l6f"),
"show": SubResource("Animation_krnge")
}

[node name="EndOfDaySequence" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)
script = ExtResource("1_ox1cl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(320, 180)
mouse_filter = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DaySummary" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[font_size=35]Summary - day 1"
fit_content = true
autowrap_mode = 0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DataContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ArrestedCount" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/DataContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
bbcode_enabled = true
text = "Total people arrested: [indent] 10"
fit_content = true
autowrap_mode = 0

[node name="GoodArrested" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/DataContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
bbcode_enabled = true
text = "Rightful arrestations:[indent] 2"
fit_content = true
autowrap_mode = 0

[node name="WrongArrested" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/DataContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
bbcode_enabled = true
text = "Unfortunate collateral convictions: [indent] 10"
fit_content = true
autowrap_mode = 0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/DataContainer"]
layout_mode = 2

[node name="SocialCreditcount" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/DataContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
bbcode_enabled = true
text = "Social credit after day 1: [indent] 10"
fit_content = true
autowrap_mode = 0

[node name="ContinueText" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
bbcode_enabled = true
text = "[center]<<press the any key to continue>>"
fit_content = true
autowrap_mode = 0

[node name="TempNodes" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CarpeDiem" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.0
offset_top = -40.0
offset_right = 123.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(122.705, 19.84)
theme_override_constants/outline_size = 2
bbcode_enabled = true
text = "[center]<< Press the any key to end the day >>
[font_size=8]carpe diem"
fit_content = true
autowrap_mode = 0

[node name="Bop" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0jle7")
}
autoplay = "bop"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n2fr5")
}
